; ModuleID = '/home/carl/AnghaBench/git/extr_sequencer.c_record_in_rewritten.c'
source_filename = "/home/carl/AnghaBench/git/extr_sequencer.c_record_in_rewritten.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"a\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.object_id*, i32)* @record_in_rewritten to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @record_in_rewritten(%struct.object_id* %0, i32 %1) #0 {
  %3 = alloca %struct.object_id*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.object_id* %0, %struct.object_id** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 (...) @rebase_path_rewritten_pending()
  %7 = call i32* @fopen_or_warn(i32 %6, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %23

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = load %struct.object_id*, %struct.object_id** %3, align 8
  %14 = call i8* @oid_to_hex(%struct.object_id* %13)
  %15 = call i32 @fprintf(i32* %12, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %14)
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @fclose(i32* %16)
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @is_fixup(i32 %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %11
  %22 = call i32 (...) @flush_rewritten_pending()
  br label %23

23:                                               ; preds = %10, %21, %11
  ret void
}

declare dso_local i32* @fopen_or_warn(i32, i8*) #1

declare dso_local i32 @rebase_path_rewritten_pending(...) #1

declare dso_local i32 @fprintf(i32*, i8*, i8*) #1

declare dso_local i8* @oid_to_hex(%struct.object_id*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @is_fixup(i32) #1

declare dso_local i32 @flush_rewritten_pending(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
